IO rework III: the end of a journey